Fix sub orgs logo formatted names wrapping
https://www.pivotaltracker.com/story/show/52782869

--- a/app/assets/stylesheets/frontend/views/_organisations.scss
+++ b/app/assets/stylesheets/frontend/views/_organisations.scss
@@ -313,6 +313,7 @@
             clear: both;
             font-weight: bold;
             margin-top: $gutter-half;
+            width: auto;
           }
 
           ul {
